--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "messageboard",
   "version": "0.0.0",
+  "engines": {
+    "node": "14.18.2"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
@@ -15,6 +18,5 @@
     "morgan": "~1.9.1",
     "nodemon": "^2.0.13",
     "pug": "2.0.0-beta11"
-  },
-  "engines": {"node": "10.x.y"}
+  }
 }
